assets/styles/uts-theme.scss
/* ... */
input[type="submit"], button[type=submit] {
  background: none repeat scroll 0 0 #428bca;
  border: medium none;
  color: #fff;
  padding: 11px 20px;
  text-transform: uppercase;
}

input[type="submit"]:hover, button[type=submit]:hover {
  background-color: #222
}

.single-sidebar input[type="text"] {
  margin-bottom: 10px;
  width: 100%;
}

.thubmnail-recent {
  margin-bottom: 30px;
  overflow: hidden;
}

.recent-thumb {
  float: left;
  height: auto;
  margin-right: 15px;
  width: 63px;
}

.thubmnail-recent > h2 {
  font-size: 20px;
  margin-bottom: 10px;
}

.thubmnail-recent > h2 a {
  color: #222;
}

.product-sidebar-price > ins {
  color: #428bca;
  font-weight: 700;
  margin-right: 10px;
  text-decoration: none;
}

.single-sidebar > ul {
  list-style: outside none none;
  margin: 0;
  padding: 0;
}

.single-sidebar li {
  border-bottom: 1px solid #f1f1f1;
  padding: 10px 0;
}

.single-sidebar a {
  display: block;
}

.tab-content h2 {
  font-size: 20px;
}

.tab-content {
  margin-bottom: 30px;
}

.submit-review label {
  display: block;
}

.submit-review input[type="text"], .submit-review input[type="email"], .submit-review textarea {
  margin-bottom: 20px;
  width: 100%;
}

.col2-set {
  margin-left: -30px;
  overflow: hidden;
}

.col-1, .col-2 {
  float: left;
  margin-left: 30px;
  width: 360px;
}

.aaf-login-box {
  font-size: 1.125rem;
  line-height: 1.5rem;
  font-weight: 400;
  color: #000;
  padding: 2em 3em;
  font-size: 16px;
  border: 1px solid #0f4beb;
}

.aaf-login {
  cursor: pointer;
}

.aaf-login-a, .aaf-login-a:hover {
  font-size: 1.7rem;
  line-height: 1.5rem;
  padding: 12px 24px;
  display: inline-block;
  color: #fff;
  background-color: #0f4beb;
  border: 0;
  cursor: pointer;
  text-decoration: none;
}

#login-form-wrap, #coupon-collapse-wrap {
  background: none repeat scroll 0 0 #f4f4f4;
  margin-bottom: 30px;
  padding: 25px;
}

#login-form-wrap label {
  display: block;
  margin-bottom: 5px;
}

#login-form-wrap input[type="text"], #login-form-wrap input[type="password"] {
  margin-bottom: 10px;
  width: 250px;
}

#login-form-wrap input[type="submit"] {
  margin-bottom: 15px;
}

div.logo img {
  height: 110px
}

.search-box {
  position: absolute;
  top: 45px;
  right: 0;
}

.pagination > li > a, .pagination > li > span {
  color: #428bca;
}

.dashboard-controls {
  margin-left: 0.5em;
}

.key-value-list {
  padding: 0;
}

.key-value-pair {
  list-style: none;
}

.key-value-pair > .key {
  font-weight: bold;
  font-size: 110%;
  display: block;
}

.view-controls {
  padding-bottom: 1em;
}

.margin-1 {
  margin: 1px;
}

.margin-5 {
  margin: 5px;
}

.margin-10 {
  margin: 10px;
}

.margin-15 {
  margin: 15px;
}

.margin-20 {
  margin: 20px;
}

.text-14 {
  font-size: 14px;
}

.text-16 {
  font-size: 16px;
}

.text-20 {
  font-size: 20px;
}

.text-30 {
  font-size: 30px;
}

.padding-10 {
  padding: 10px;
}

.padding-top-10 {
  padding-top: 10px;
}

.padding-bottom-10 {
  padding-bottom: 10px;
}

.padding-bottom-15 {
  padding-bottom: 15px;
}

.padding-bottom-20 {
  padding-bottom: 20px;
}

.radio-label {
  font-weight: 700;
}

.panel-search-refine {
  margin-left: 10px;
  margin-bottom: 10px;
}

.header h1#main-title {
  text-align: center;
}

.panel-default > .panel-heading {
  background-color: $panel-branding-background-color;
  color: $panel-branding-color;
}

.padding-remove {
  padding-left: 0px;
  padding-right: 0px;
}

.width-5 {
  width: 5% !important;
}

.width-10 {
  width: 10% !important;
}

.width-20 {
  width: 20% !important;
}

.width-30 {
  width: 30% !important;
}

.width-40 {
  width: 40% !important;
}

.width-50 {
  width: 50% !important;
}

.width-60 {
  width: 60% !important;
}

.width-70 {
  width: 70% !important;
}

.width-80 {
  width: 80% !important;
}

.width-90 {
  width: 90% !important;
}

.width-100 {
  width: 100% !important;
}

tree-internal div.rootless {
  display: none !important;
}

tree-internal .tree li {
  list-style: none;
  cursor: default;
}

tree-internal .tree div.node-checkbox {
  display: inline;
}

tree-internal .tree div.node-checkbox {
  display: inline;
}

tree-internal .tree div.node-value {
  display: inline;
}

tree-internal ul.tree {
  padding-left: 30px;
}

node-menu {
  display: none;
}

tree-internal > ul.rootless > li > tree-internal > ul {
  padding-left: 0 !important;
}

.btn-secondary {
  color: #fff;
  background-color: #6c757d;
  border-color: #6c757d;
}

.nav-search-bar {
  padding-top: 10px;
  padding-left: 10px;
}

.view-accordion {
  margin-top: 20px;
}

.panel-body .key-value-pair {
  margin-top: 10px;
}

.panel-body h4 {
  margin-top: 10px;
}

.view-contributor {
  margin-top: 10px;
}

.field-label {
  font-size: 110%;
  font-weight: bold;
}

.label-font {
  font-weight: bold;
  display: inline-block;
  margin-bottom: 5px;
}

.tab-header-font {
  font-weight: bold;
}

.h1-header {
  font-size: 36px;
  font-weight: bold;
}

.h2-header {
  font-size: 30px;
  font-weight: bold;
}

.h3-header {
  font-size: 24px;
  font-weight: bold;
}

.h4-header {
  font-size: 18px;
  font-weight: bold;
}

.h5-header {
  font-size: 14px;
  font-weight: bold;
}

.h6-header {
  font-size: 12px;
  font-weight: bold;
}

.normal-font {
  font-weight: normal;
}

.view-contributor > .col-xs-3 {
  white-space: -moz-pre-wrap !important;
  white-space: -webkit-pre-wrap;
  white-space: -pre-wrap;
  white-space: -o-pre-wrap;
  white-space: pre-wrap;
  word-wrap: break-word;
  word-break: break-all;
  white-space: normal;
}

.completer-dropdown {
  /*This worked because shadow dom did not!*/
  width: auto !important;
  overflow-y: scroll;
  overflow-x: auto;
  max-height: 400px;
}

.overlay {
  pointer-events: none;
  opacity: 0.6;
}

